--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 .form-group {
   margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .form-control {
