--- a/style.css
+++ b/style.css
@@ -68,3 +68,15 @@ body {
   border-radius: 5px;
   box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
 }
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px 0;
+}
+
+.header img {
+  height: 50px;
+  margin-right: 10px;
+}
