--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body {
 
 .header {
   display: flex;
-  align-items: center;
+  align-items: left;
   justify-content: center;
   margin: 20px 0;
 }
